Fix site nav links being unreadable on smaller screens

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -95,8 +95,10 @@ Header
   	}
 }
 
-.wrapper-background .site-nav .page-link {
-	color: white;
+@media screen and (min-width: calc(1px + minima.$on-palm)) {
+	.wrapper-background .site-nav .page-link {
+		color: white;
+	}
 }
 
 /*-------------------------
